--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ hot_code_reloading-*.tar
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
+/priv/static/
+
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
